--- a/微信公众号/1.公众号开发.md
+++ b/微信公众号/1.公众号开发.md
@@ -6,4 +6,27 @@
 
 [微信公众号开发文档](https://developers.weixin.qq.com/doc/offiaccount/Getting_Started/Overview.html)
 
+[微信开放社区](https://developers.weixin.qq.com/community/minihome/question/1277775808983138305)
+
 # 基础
+1. OpenId、UnionId
+
+    为了识别用户,每个用户针对每个公众号会产生一个安全的OpenID
+
+    在多公众号、移动应用之间为了用户共通，可以使用UnionID，一个用户对`同一开放平台`账号下的公众号和应用，只有一个UnionID
+
+2. 网页授权
+
+    * 2种scope区别
+
+          snsapi_base 获取用户的openid 静默授权
+
+          snsapi_userinfo 获取用户的基本信息 需要用户手动同意  无需关注公众号 （对于已关注公众号的用户，如果用户从公众号的会话或者自定义菜单进入本公众号的网页授权页，即使是scope为snsapi_userinfo，也是静默授权）
+    
+    * OAuth2.0
+
+        微信网页授权是通过OAuth2.0机制实现的
+
+        [OAuth2.0简介](http://www.ruanyifeng.com/blog/2019/04/oauth_design.html)
+
+
